--- a/src/Tedd.BitUtils/Tedd.BitUtils.csproj
+++ b/src/Tedd.BitUtils/Tedd.BitUtils.csproj
@@ -5,14 +5,14 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Tedd Hansen</Authors>
     <Company>Tedd Hansen</Company>
-    <Description>Bit manipulation of Byte, Int16, UInt16, Int32, UInt32, Int64, UInt64: Ror, Rol, SetBit, IsBitSet</Description>
-    <PackageTags>bit setbit getbit isbitset pack unpack ror rol</PackageTags>
+    <Description>Bit manipulation of Byte, Int16, UInt16, Int32, UInt32, Int64, UInt64: Ror, Rol, SetBit, IsBitSet, ReverseBits</Description>
+    <PackageTags>bit setbit getbit isbitset pack unpack ror rol reverse reversebits</PackageTags>
     <Copyright>Tedd Hansen</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/tedd/Tedd.BitUtils</PackageProjectUrl>
     <RepositoryUrl>https://github.com/tedd/Tedd.BitUtils</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
