--- a/src/Tedd.BitUtils.Net4Tests/packages.config
+++ b/src/Tedd.BitUtils.Net4Tests/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Tedd.RandomExtensions" version="1.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="Tedd.RandomUtils" version="1.0.6" targetFramework="net48" />
   <package id="xunit" version="2.4.1" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net48" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net48" />
